--- a/index.html
+++ b/index.html
@@ -4,9 +4,138 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Me perdonas?</title>
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Reseteo de estilos globales */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            background: linear-gradient(45deg, #ff66b2, #ff3399, #ff9966, #66ccff);
+            font-family: 'Arial', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            z-index: 2;
+        }
+
+        .card {
+            background: radial-gradient(circle, #ff99cc, #ff66cc, #ff3399);
+            padding: 40px;
+            border-radius: 25px;
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            width: 350px;
+            position: relative;
+            z-index: 2;
+            animation: float 4s ease-in-out infinite;
+        }
+
+        h1 {
+            font-size: 2.5em;
+            color: #fff;
+            text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+            margin-bottom: 20px;
+            animation: bounce 1.5s ease infinite;
+        }
+
+        .buttons {
+            margin-bottom: 20px;
+        }
+
+        button {
+            background-color: #ffffff;
+            border: none;
+            color: #ff3399;
+            font-size: 1.2em;
+            padding: 12px 30px;
+            margin: 10px;
+            border-radius: 30px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+            width: 100px;
+        }
+
+        button:hover {
+            background-color: #ff66cc;
+            transform: scale(1.1);
+        }
+
+        button:active {
+            transform: scale(1);
+        }
+
+        p {
+            font-size: 1.5em;
+            font-weight: bold;
+            color: #fff;
+            margin-top: 20px;
+            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+        }
+
+        @keyframes float {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-20px);
+            }
+        }
+
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-10px);
+            }
+        }
+
+        @keyframes emojiAnimate {
+            0% {
+                transform: scale(0.8) translateY(0);
+                opacity: 1;
+            }
+            100% {
+                transform: scale(2) translateY(-500px);
+                opacity: 0;
+            }
+        }
+
+        .emoji {
+            position: absolute;
+            font-size: 30px;
+            animation: emojiAnimate 6s ease-out forwards;
+            color: white;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+        }
+
+        .emoji-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            pointer-events: none;
+            z-index: 1;
+        }
+    </style>
 </head>
 <body>
+
     <div class="container">
         <div class="card">
             <h1>¿Me perdonas?</h1>
@@ -18,14 +147,44 @@
         </div>
     </div>
 
+    <div id="emojiContainer" class="emoji-container"></div>
+
     <script>
+        function createEmojis(emoji) {
+            let container = document.getElementById("emojiContainer");
+            for (let i = 0; i < 50; i++) {
+                let emojiElement = document.createElement("div");
+                emojiElement.classList.add("emoji");
+                emojiElement.innerText = emoji;
+                container.appendChild(emojiElement);
+
+                emojiElement.style.left = Math.random() * 100 + "%";
+                emojiElement.style.top = Math.random() * 100 + "%";
+                emojiElement.style.fontSize = Math.random() * 30 + 20 + "px";
+            }
+        }
+
+        function clearEmojis() {
+            let container = document.getElementById("emojiContainer");
+            container.innerHTML = "";
+        }
+
         document.getElementById("yesButton").addEventListener("click", function() {
-            document.getElementById("responseMessage").innerText = "¡Gracias tembo, ya no va a volver a pasar!";
+            clearEmojis();
+            createEmojis("🥰🐣😭");
+            setTimeout(function() {
+                document.getElementById("responseMessage").innerText = "¡Gracias tembo, ya no va a volver a pasar!";
+            }, 6000);
         });
 
         document.getElementById("noButton").addEventListener("click", function() {
-            document.getElementById("responseMessage").innerText = "Mba'epiko que pio voy a hacer";
+            clearEmojis();
+            createEmojis("🙄👍🏿");
+            setTimeout(function() {
+      j          document.getElementById("responseMessage").innerText = "Mba'epiko que pio voy a hacer";
+            }, 6000);
         });
     </script>
+
 </body>
-</html>
+    </html>h
